@@ -121,6 +121,7 @@ S3method(makeRLearner,classif.mlp)
 S3method(makeRLearner,classif.multinom)
 S3method(makeRLearner,classif.naiveBayes)
 S3method(makeRLearner,classif.neuralnet)
+S3method(makeRLearner,classif.nnTrain)
 S3method(makeRLearner,classif.nnet)
 S3method(makeRLearner,classif.nodeHarvest)
 S3method(makeRLearner,classif.pamr)
@@ -269,6 +270,7 @@ S3method(predictLearner,classif.mlp)
 S3method(predictLearner,classif.multinom)
 S3method(predictLearner,classif.naiveBayes)
 S3method(predictLearner,classif.neuralnet)
+S3method(predictLearner,classif.nnTrain)
 S3method(predictLearner,classif.nnet)
 S3method(predictLearner,classif.nodeHarvest)
 S3method(predictLearner,classif.pamr)
@@ -465,6 +467,7 @@ S3method(trainLearner,classif.mlp)
 S3method(trainLearner,classif.multinom)
 S3method(trainLearner,classif.naiveBayes)
 S3method(trainLearner,classif.neuralnet)
+S3method(trainLearner,classif.nnTrain)
 S3method(trainLearner,classif.nnet)
 S3method(trainLearner,classif.nodeHarvest)
 S3method(trainLearner,classif.pamr)
